# normal-notepad

./: Cargo.toml  README.md  build.rs
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
src/: constants.rs  context_menu.rs  file_io.rs  i18n.rs  line_column.rs  main.rs  status_bar.rs  theme.rs
