[package]
name = "nn"
version = "0.1.0"
edition = "2024"

[package.metadata.winresource]
ProductName = "Normal Notepad"
FileDescription = "Normal Notepad"
LegalCopyright = "© Ryu. All rights reserved."

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Globalization",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }

[build-dependencies]
winresource = "0.1.28"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
